# MLB-Props

./: .cursorindexingignore  .env.example  .gitignore  CLEANUP_LOG.md  PAPER_NOTES.md  README.md  activate.ps1  export-notebook.ps1  export_notebook.py  pyproject.toml
Data/: README.md  savant2024.parquet
Data/Pitcher-Starts-2023-2025-Data/: Pitcher2023-2025.parquet
Models/Strikeout-Model/: LightGBM.ipynb  Naive-Linear-Model.ipynb  README.md  sample_3pct.csv  train.ipynb  train.py
Models/Strikeout-Model/Shap-Tables/: shap_table_v6_lgb.csv
RosterScraper/: RosterScraper.py
Training-Data-Cleaned/: Batting-Training-Data-Cleaned.ipynb  Pitching-Training-Data-Cleaned.ipynb
docs/: dev-notes.md  model-card.md
rules/: use-polars.mdc
src/Notebooks/: ballpark.ipynb  batter-features.ipynb  batter_rolling.ipynb  features.ipynb  pitcher-features.ipynb  pitcher-rolling.ipynb  statcast.ipynb
src/Python/: ballpark.py  batter_features.py  batter_rolling.py  config.py  daily_lineups.py  features.py  identity.py  pitcher_features.py  pitcher_rolling.py  reliability.py  statcast.py
src/mlb_props/: __init__.py  batter_features.py  config.py  features.py  pitcher_features.py  pitcher_rolling.py  statcast.py
src/mlb_props.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ballpark.py  test_batter_features.py  test_batter_rolling.py  test_daily_lineups.py  test_feature_safety.py  test_identity.py  test_pipeline.py  test_pitcher_features.py  test_pitcher_rolling.py  test_reliability.py  test_stabilization.py  test_statcast.py  test_train.py
(+35 files in other folders)
